[gd_scene load_steps=8 format=3 uid="uid://ktubc2fyxeev"]

[ext_resource type="PackedScene" path="res://Scenes/Battle Scenes/ActionQueue.tscn" id="1"]
[ext_resource type="Script" path="res://Scenes/Battle Scenes/CombatGUI.gd" id="2"]
[ext_resource type="Script" path="res://Scenes/Battle Scenes/Combat.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://f8qvvoa8gywk" path="res://Assets/UI/Selector.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bwkr71clxk32v" path="res://Assets/backgrounds/Screenshot_20230318_165916.png" id="6_hqre3"]
[ext_resource type="PackedScene" path="res://Scenes/Battle Scenes/Camera2D.tscn" id="8"]

[sub_resource type="Environment" id="1"]
background_mode = 4
glow_enabled = true
glow_hdr_threshold = 1.5

[node name="Combat" type="Node"]
script = ExtResource("5")

[node name="ActionQueue" parent="." instance=ExtResource("1")]
unique_name_in_owner = true

[node name="Combatants" type="Node" parent="."]

[node name="Party" type="Node" parent="Combatants"]
unique_name_in_owner = true

[node name="Enemies" type="Node" parent="Combatants"]
unique_name_in_owner = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 250)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
size_flags_horizontal = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 0.25
follow_focus = true

[node name="BattleLog" type="Label" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Battle Log:"

[node name="CombatGUI" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
script = ExtResource("2")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CombatGUI"]
layout_mode = 2

[node name="EnemyGUI" type="HBoxContainer" parent="CombatGUI/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="MarginContainer" parent="CombatGUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CombatGUI/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Menu" type="VBoxContainer" parent="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="Attack" type="Button" parent="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Attack"

[node name="Skills" type="Button" parent="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer/Menu"]
layout_mode = 2
text = "Skills"

[node name="Defend" type="Button" parent="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer/Menu"]
layout_mode = 2
text = "Defend"

[node name="Items" type="Button" parent="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer/Menu"]
layout_mode = 2
text = "Items"

[node name="Switch" type="Button" parent="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer/Menu"]
layout_mode = 2
text = "Switch"

[node name="Flee" type="Button" parent="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer/Menu"]
layout_mode = 2
text = "Flee"

[node name="Exit" type="Button" parent="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer/Menu"]
layout_mode = 2
text = "Exit"

[node name="SecondMenu" type="VBoxContainer" parent="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Container" type="Container" parent="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerGUI" type="HBoxContainer" parent="CombatGUI/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
alignment = 1

[node name="CharaSplash" type="Sprite2D" parent="CombatGUI"]
visible = false
z_index = -1
position = Vector2(1596, 511)

[node name="Camera2D" parent="." instance=ExtResource("8")]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
offset_left = -405.0
offset_top = 163.0
offset_right = 2268.0
offset_bottom = 1150.0
color = Color(0, 0, 0, 1)

[node name="Rwyzis" type="Sprite2D" parent="ParallaxBackground"]
z_as_relative = false
position = Vector2(942, 386)
scale = Vector2(1.39398, 1.39398)
texture = ExtResource("6_hqre3")

[node name="Selector" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(10.41, 0.01, 0.01, 0.8)
texture = ExtResource("6")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("1")

[connection signal="pressed" from="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer/Menu/Attack" to="CombatGUI" method="_on_Attack_pressed"]
[connection signal="pressed" from="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer/Menu/Skills" to="CombatGUI" method="_on_Skills_pressed"]
[connection signal="pressed" from="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer/Menu/Defend" to="CombatGUI" method="_on_Defend_pressed"]
[connection signal="pressed" from="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer/Menu/Items" to="CombatGUI" method="_on_Items_pressed"]
[connection signal="pressed" from="CombatGUI/VBoxContainer/CenterContainer/HBoxContainer/Menu/Switch" to="CombatGUI" method="_on_Switch_pressed"]
